Cambios minimos en el menu

--- a/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
@@ -121,6 +121,15 @@ header{
   						color: $purple;
   						font-size: 12px;
   					}
+  					&.dropdown{
+  						ul.dropdown-menu{
+  							li{
+  								a{
+  									text-transform: none;
+  								}
+  							}
+  						}
+  					}
   				}
   			}
   		}
