Culminado sección de multimedia

--- a/wp-content/themes/inclusiva/assets/styles/common/_variables.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_variables.scss
@@ -23,6 +23,8 @@ $orange:				#b5733c;
 $yellow:				#f1cf00;
 
 $gray--light:			#999;
+$gray--text:			#515151;
+$gray--text--dark:		#414141;
 $blue--fb:				#3b5998;
 $blue--fb--hover:		#4264aa;
 $blue--tw:				#55acee;
