--- a/wp-content/themes/inclusiva/assets/styles/main.scss
+++ b/wp-content/themes/inclusiva/assets/styles/main.scss
@@ -18,5 +18,6 @@
 @import "layouts/_footer";
 @import "layouts/_pages";
 @import "layouts/_posts";
+@import "layouts/_home";
 
 /* CUstom Styles */ 
