Noticias casi listo

--- a/wp-content/themes/inclusiva/assets/styles/common/_variables.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_variables.scss
@@ -3,14 +3,14 @@ $icon-font-path:        "../fonts/";
 
 // Grid settings
 $main-sm-columns:       12;
-$sidebar-sm-columns:    4;
+$sidebar-sm-columns:    3;
 
 // Colors
 $brand-primary:         #27ae60;
 $white: 				#ffffff;
 $white--smoke:			#fafafa;
 $brown:					#4c3327;
-$brown--light:			#d2ccc9;
+$brown--light:			#c6baa2;
 
 $black:					#000;
 $green:					#007739;
