--- a/wp-content/themes/inclusiva/assets/styles/common/_mixins.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_mixins.scss
@@ -6,3 +6,7 @@
 	font-family: 'Open Sans', sans-serif;
 	font-weight: $weight #{" !important"};
 }
+
+@mixin text-shadow(){
+	text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
+}
