--- a/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
@@ -66,7 +66,7 @@
 										h3, time{
 											margin: 0;
 											color: $white;
-											a{ color: $yellow; }
+											a{ color: $green--accent; }
 										}
 										h3{
 											font-size: 14px;
@@ -93,7 +93,7 @@
 										h3, time{
 											margin: 0;
 											color: $white;
-											a{ color: $yellow; }
+											a{ color: $green--accent; }
 										}
 										h3{
 											font-size: 14px;
@@ -116,7 +116,7 @@
 										position: absolute;
 										top: 0;
 										padding: 15px;
-										color: $yellow;
+										color: $green--accent;
 									}
 								}
 							}
@@ -141,8 +141,18 @@
 			}
 			figcaption{
 				position: absolute;
-				bottom: 0; 
+				bottom: 0;
+				left: 5px;
+				right: 5px; 
 				padding: 15px;
+				 opacity: 0.8;
+				background: -moz-linear-gradient(top, rgba(0,0,0,0.001) 0%, rgba(0,0,0,1) 100%);
+				background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.001)), color-stop(100%,rgba(0,0,0,1)));
+				background: -webkit-linear-gradient(top, rgba(0,0,0,0.001) 0%,rgba(0,0,0,1) 100%);
+				background: -o-linear-gradient(top, rgba(0,0,0,0.001) 0%,rgba(0,0,0,1) 100%);
+				background: -ms-linear-gradient(top, rgba(0,0,0,0.001) 0%,rgba(0,0,0,1) 100%);
+				background: linear-gradient(to bottom, rgba(0,0,0,0.001) 0%,rgba(0,0,0,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 				h3{
 					font-size: 24px !important;
 				}
