--- a/wp-content/themes/inclusiva/assets/styles/layouts/_archives.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_archives.scss
@@ -1,63 +1,56 @@
-.term-post-format-video{
-	.wrap{
-		.page-header{
-			margin: 0 -30px 0;
-			padding: 40px 30px 20px;
-			background-color: $black;
-			border-bottom: 2px solid $black--light;
-			h1{
-				color: $red--google;
-			}
-		}
-	}
-}
-
-.multimedia{
-	&.video-one{
-		@include gradient-vertical( $black, $gray--text--dark, 0%, 100% );
+.archive{
+	.multimedia--1{
 		@include make-row();
-		margin: 0 -30px 20px;
-		padding: 30px 15px;
-		.multimedia-video{
-			@include make-sm-column(8);
-		}
-		.multimedia-content{
-			@include make-sm-column(4);
-			h2.multimedia-title{
-				a{
-					color: $gray--lighter;
+		margin: 0 0 30px;
+		figure{
+			@include gradient-vertical( $black, $gray--text--dark, 0%, 100% );
+			padding: 30px 15px;
+			.multimedia--1__video{
+				@include make-sm-column(8);
+			}
+			.multimedia--1__caption{
+				@include make-sm-column(4);
+				.multimedia--1__caption__title{
+					a{
+						color: $gray--lighter;
+						@include text-shadow();
+					}
+				}
+				time{
+					display: block;
+					padding-bottom: 15px;
+					@include opensans(600);
+					color: $gray--light;
+					@include text-shadow();
+				}
+				p{ 
+					color: $gray--light;  
 					@include text-shadow();
 				}
 			}
-			time.updated{
-				display: block;
-				padding-bottom: 15px;
-				@include opensans(600);
-				color: $gray--light;
-				@include text-shadow();
-			}
-			p{ 
-				color: $gray--light;  
-				@include text-shadow();
-			}
+			@include clearfix();
 		}
 	}
-	
-	&.just-video{
-		@include make-sm-column(4);
-		@include make-xs-column(6);
-		padding-left: 0;
-		padding-right: 1px;
-		border-bottom: 1px solid transparent;
-		padding-bottom: 0px;
-		padding-top: 0;
-		margin-top: 0;
-
+	.multimedia--2{
+		@include make-row();
 		figure{
-			position: relative;
-			figcaption{ 
-				position: absolute;  
+			@include make-xs-column(6);
+			margin-bottom: 30px;
+			.multimedia--2__icon{
+				color: $black--light;
+				position: absolute;
+				top: 15px;
+				left: 30px;
+				@include opacity(.75);
+				i{
+					font-size: 24px;
+				}
+			}
+			.multimedia--2__caption{
+				position: absolute;
 				bottom: 0;
+				left: 15px;
+				right: 15px;
 				padding: 15px;
 				opacity: .8;
 				background: -webkit-gradient(linear,left top,left bottom,color-stop(0,rgba(0,0,0,.001)),color-stop(100%,#000));
@@ -66,10 +59,11 @@
 				background: -webkit-gradient(linear,left top,left bottom,from(rgba(0,0,0,.001)),to(black));
 				background: linear-gradient(to bottom,rgba(0,0,0,.001) 0,#000 100%);
 				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000', GradientType=0 );
-				h2{
-					font-size: 16px;
-					@include opensans(600);
-					a{ 
+				.multimedia--2__caption__title{
+					margin: 0;
+					font-size: 13px;
+					@include opensans(800);
+					a{
 						color: $white;
 						@include text-shadow();
 					}
@@ -77,7 +71,7 @@
 				time{
 					@include opensans(400);
 					font-size: 11px;
-					color: $white--smoke;
+					color: $white; 
 					@include text-shadow();
 				}
 			}
@@ -85,6 +79,22 @@
 	}
 }
 
-@media(min-width: $screen-lg-min){
+@media(min-width: $screen-sm-min){
+	.archive{
+		.multimedia--2{
+			figure{
+				@include make-sm-column(6);
+			}
+		}
+	}
+}
 
+@media(min-width: $screen-lg-min){
+	.archive{
+		.multimedia--2{
+			figure{
+				@include make-lg-column(4);
+			}
+		}
+	}
 }
