--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -64,7 +64,7 @@ html{
 }
 
 body{
-	@include opensans(light);
+	@include opensans();
   &.page, &.archive, &.single{
     background-color: $white--smoke;
     .wrap{
