--- a/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
@@ -384,14 +384,14 @@ h1{
 	}
 	.home{
 		.sl__home{
-			width: 1170px;
+			width: 1140px;
 			margin: 0 auto;
 			.owl-stage-outer{
 				overflow: visible;
 				.owl-stage{
 					background-color: $black;
 					.owl-item{
-						width: 1170px;
+						width: 1140px;
 						figure{
 							position: relative;
 							-webkit-transition: all 0.3s ease;
@@ -585,10 +585,7 @@ h1{
 
 	header{
 		&.super-header{
-			.container{
-				padding-left: 0;
-				padding-right: 0;
-			}
+			.container{}
 		}
 	}
 }
