--- a/wp-content/themes/inclusiva/assets/styles/main.scss
+++ b/wp-content/themes/inclusiva/assets/styles/main.scss
@@ -13,6 +13,7 @@
 @import "components/_forms";
 @import "components/_grid";
 @import "components/_wp-classes";
+@import "components/_menu";
 @import "layouts/_header";
 @import "layouts/_sidebar";
 @import "layouts/_footer";
