Servicios en linea + Footer

--- a/wp-content/themes/inclusiva/assets/styles/components/_menu.scss
+++ b/wp-content/themes/inclusiva/assets/styles/components/_menu.scss
@@ -1,2 +1,11 @@
-ul.nav li.dropdown:hover ul.dropdown-menu{ display: block; }
+ul#menu-navegacion-primaria{
+	li{
+		&.dropdown{
+			&:hover{
+				ul.dropdown-menu{ display: block; }
+			}
+		}
+	}
+}
+
 .nav .dropdown-toggle .caret { display:none; }
