Mejorando el menú + Open Gov

--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -65,6 +65,7 @@ html{
 
 body{
 	@include opensans();
+  font-size: 13px;
   &.page, &.archive, &.single{
     background-color: $white--smoke;
     .wrap{
