--- a/wp-content/themes/inclusiva/assets/styles/common/_variables.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_variables.scss
@@ -37,4 +37,5 @@ $blue--tw--hover:		#6cb7f0;
 $blue--sky:				#ccf1f6;
 $red:					#7C2202;
 $red--google:			#dd4b39;
+$red--google--light:	lighten($red--google, 35%);
 $red--google--hover:	#e15f4f;
