--- a/wp-content/themes/inclusiva/assets/styles/common/_mixins.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_mixins.scss
@@ -28,12 +28,12 @@
 		height: 100%;
 		z-index: 2;
 		opacity: 0.8;
-		background: -moz-linear-gradient(top, rgba(0,0,0,0.15) 0%, rgba(0,0,0,1) 100%); 
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.15)), color-stop(100%,rgba(0,0,0,1)));
-		background: -webkit-linear-gradient(top, rgba(0,0,0,0.15) 0%,rgba(0,0,0,1) 100%);
-		background: -o-linear-gradient(top, rgba(0,0,0,0.15) 0%,rgba(0,0,0,1) 100%);
-		background: -ms-linear-gradient(top, rgba(0,0,0,0.15) 0%,rgba(0,0,0,1) 100%);
-		background: linear-gradient(to bottom, rgba(0,0,0,0.15) 0%,rgba(0,0,0,1) 100%);
+		background: -moz-linear-gradient(top, rgba(0,0,0,0.001) 0%, rgba(0,0,0,1) 100%); 
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.001)), color-stop(100%,rgba(0,0,0,1)));
+		background: -webkit-linear-gradient(top, rgba(0,0,0,0.001) 0%,rgba(0,0,0,1) 100%);
+		background: -o-linear-gradient(top, rgba(0,0,0,0.001) 0%,rgba(0,0,0,1) 100%);
+		background: -ms-linear-gradient(top, rgba(0,0,0,0.001) 0%,rgba(0,0,0,1) 100%);
+		background: linear-gradient(to bottom, rgba(0,0,0,0.001) 0%,rgba(0,0,0,1) 100%);
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 	}
 }
@@ -49,4 +49,11 @@
 		font-size: 8px;
 		@include opacity(.5);
 	}
+}
+
+@mixin title-xs($variant: 'light'){
+	font-size: 10px;
+    @include opensans( $variant );
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
 }
