--- a/wp-content/themes/inclusiva/assets/styles/common/_mixins.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_mixins.scss
@@ -27,7 +27,7 @@
 		right: 0;
 		height: 100%;
 		z-index: 2;
-		opacity: 0.8;
+		opacity: 0.35;
 		background: -moz-linear-gradient(top, rgba(0,0,0,0.001) 0%, rgba(0,0,0,1) 100%); 
 		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.001)), color-stop(100%,rgba(0,0,0,1)));
 		background: -webkit-linear-gradient(top, rgba(0,0,0,0.001) 0%,rgba(0,0,0,1) 100%);
@@ -37,6 +37,12 @@
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 	}
 }
+
+@mixin text-on-focus(){
+	color: $white;
+    text-shadow: 1px 2px 2px rgba(0,0,0,.3);
+}
+
 @mixin photo-credit( $photo: 'AGRO RURAL' ){ 
 	&:before{
 		position: absolute;
