--- a/wp-content/themes/inclusiva/assets/styles/layouts/_category.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_category.scss
@@ -1,8 +1,4 @@
 .category{
-	.wrap{
-		background-color: transparent !important;
-		margin-top: 30px !important;
-	} 
 
 	.masshead{
 		position: relative;
@@ -35,12 +31,88 @@
 			}
 		}
 	}
+
 	&.category-amazonas{
 		.masshead{
 			background-image: url(../images/masshead--amazonas.jpg) !important;
 			@include photo-credit('Andrew Tonn');
 		}
 	}
+
+	.wrap{
+		background-color: transparent !important;
+		margin-top: 30px !important;
+		.main{
+			.section{
+				&.section__category-feed{
+					padding-top: 0;
+					.page-header{
+						margin: 0 0 20px;
+					}
+				}
+
+				article.post{
+					figure{
+						float: left;
+						margin-right: 15px;
+					}
+				}
+			}
+		}
+		.sidebar{
+			.category-select{
+				padding: 15px;
+			}
+			.owl-carousel{
+				.owl-stage-outer{
+					.owl-item{
+						figure.item{
+							img{
+								position: relative;
+								z-index: 0;
+								&:before{
+									@include focus-shadow();
+									content: '';
+								}
+							}
+							figcaption{
+								position: absolute;
+								bottom: 0;
+								left: 0;
+								right: 0;
+								padding: 15px;
+								z-index: 10;
+								h4, h4 > a, p{
+									@include text-on-focus();
+								}
+								h4{
+									@include opensans(bold);
+									font-size: 18px;
+								}
+							}
+						}
+					}
+				}
+				.owl-dots{
+					position: absolute;
+					top: 3%;
+					right: 1%;
+					.owl-dot{
+						float: left;
+						margin: 0 5px 0 0;
+						background: $white;
+						padding: 4px;
+						border-radius: 30px;
+						-webkit-box-shadow: inset 0 0 3px rgba(0,0,0,.1);
+						box-shadow: inset 0 0 3px rgba(0,0,0,.1);
+						&.active{
+							background: $green--accent;
+						}
+					}
+				}
+			}
+		}
+	} 
 }
 
 @media(min-width: $screen-sm-min){
