--- a/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
@@ -14,8 +14,14 @@
 					}
 					p{
 						font-size: 12px;
+						&:after{
+							@include nav-divider();
+							display: block;
+							content: '';
+						}
 					}
 					ul.nav{
+						margin-top: 20px;
 						li{
 							a{
 								padding: 0;
@@ -49,11 +55,6 @@
 										}
 									}
 								}
-								&:after{
-									content: '';
-									@include nav-divider();
-									display: block;
-								}
 							}
 						}
 					}
@@ -64,13 +65,6 @@
 }
 
 
-
-.page-template-template-noticias, .archive{
-
-	.page-header{
-		
-	}
-}
 
 .archive{
 	.masshead{
