--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -132,6 +132,77 @@ p{
 	padding-bottom: 30px;
 }
 
+article.article-list{
+  figure{
+    position: relative;
+    display: block;
+    float: left;
+    margin-right: 15px;
+    a.format-icon{
+      position: absolute;
+      top: 0px;
+      right: 0px;
+      padding:5px 10px; 
+      background-color: $yellow;
+      color: $black; 
+      i{
+        font-size: 10px;
+      }
+    }
+  }
+  header{
+    h2, h3, h4{
+      @include opensans(semibold);
+      font-size: 18px;
+    }
+    time{
+      @include opensans(light);
+      display: block;
+      position: relative; 
+      margin-bottom: 5px;
+      color: $gray;
+    }
+  }
+  .entry-summary{
+    .cta__link{
+      @include opensans();
+      text-transform: none;
+    }
+  }
+}
+
+.widget{
+  figure{
+    position: relative;
+    display: block;
+    z-index: 0;
+    @include focus-shadow();
+    figcaption{
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: 15px;
+      z-index: 10;
+      h4, h4 a, p, ul li a, p a{
+        @include text-on-focus();
+      }
+      h4{
+        @include opensans(bold);
+        font-size: 18px; 
+        margin-bottom: 0;
+      }
+      p, ul li a, p a{
+        font-size: 11px;
+        @include opensans();
+      }
+      p{
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
 /* custom inclusion of right, left and below tabs */
 
 .tabs-below > .nav-tabs,
