--- a/wp-content/themes/inclusiva/assets/styles/common/_variables.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_variables.scss
@@ -26,6 +26,7 @@ $purple: 				#604848;
 $cream:					#F0F0D8;
 $orange:				#b5733c;
 $yellow:				#f1cf00;
+$yellow--light:	lighten($yellow, 35%);
 
 $gray--light:			#999;
 $gray--lighter:			#eee;
