--- a/wp-content/themes/inclusiva/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_footer.scss
@@ -76,6 +76,9 @@ footer{
 									@include opensans();
 									color: $brown;
 									font-size: 11px;
+									&:hover{
+										color: $red--google;
+									}
 								}
 							}
 						}
