--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -86,6 +86,7 @@ body{
         h1{
           @include opensans(); 
           font-size: 36px;  
+          color: $brown;
           small{
             font-size: 13px;
             @include opensans(); 
