mejorando el footer y el home en si

--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -109,7 +109,7 @@ body{
     overflow: hidden;
 
       @include focus-shadow();
-      z-index: 0
+      z-index: 0;
 
   }
 }
@@ -190,7 +190,7 @@ p{
 /* Páginas Especiales */
 
 .section{
-	padding-top: 30px;
+	padding-top: 60px;
 	padding-bottom: 30px;
 }
 
