--- a/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
@@ -4,6 +4,9 @@
 			margin: 0;
 			h3{
 				margin-top: 0;
+				@include opensans();
+				padding: 13px 0px 9pt;
+				letter-spacing: 1.25px;
 			}
 		}
 
@@ -96,7 +99,7 @@
 		&.multimedia__banner{
 			background-color: $gray--text; 
 			.multimedia{
-				@include make-lg-column(12);
+				@include make-lg-column(9);
 				.page-header{
 					margin: 0;
 					border-bottom: 1px solid $gray--text--dark;
@@ -144,7 +147,7 @@
 							a{ color: $orange; }
 
 							.multimedia--1{
-								@include make-lg-column(5);
+								@include make-lg-column(6);
 								/*@include make-sm-column(12);*/
 								@include make-xs-column(4); 
 								figure{ 
@@ -171,11 +174,11 @@
 								}
 							}
 							.multimedia--2{
-								@include make-lg-column(7);
+								@include make-lg-column(6);
 								/*@include make-sm-column(12);*/
 								@include make-xs-column(8);
 								figure{ 
-									@include make-lg-column(4);
+									@include make-lg-column(6);
 									@include make-xs-column(6);
 									a.tab-icon{
 										i{
@@ -217,12 +220,358 @@
 					}
 				}
 			}
+			.sidebar{
+				.widget{
+					background-color: transparent;
+					@include text-on-focus();
+					border-left: 1px solid $gray--text--dark;
+					.nav-sidebar{
+						li{
+							a{
+								border-bottom: 1px solid transparent;
+								@include text-on-focus();
+							}
+						}
+					}
+				}
+			}
 		}
 	}	
 }
 
+@media (max-width: $screen-md-max){
+	.home{
+		.sl__home{
+			.owl-stage-outer{
+				.owl-stage{
+					background-color: $black;
+					.owl-item{
+						figure{
+							img{}
+							figcaption{
+								position: absolute;
+								top: 0;
+								left: 0;
+								right: 0;
+								bottom: 0;
+								background: url(../images/pixel-50percent-black.png) repeat;
+									background: rgba(0,0,0,0.5);
+									padding-left: 20px;
+									padding-right: 20px;
+									padding-top: 60px;
+									.sl__home__hashtag, .sl__home__title, .sl__home__content, .sl__home__link{
+										
+									}
+									.sl__home__hashtag{
+										a{	
+											color: $white;
+											@include opensans(semibold);
+											text-transform: uppercase;
+											font-size: 10px;
+										}
+									}
+									.sl__home__title{
+										h3{
+											text-transform: uppercase; 
+											@include opensans();
+											color: $white;                                                                                                                                                                        
+											margin-top: 0px;
+											margin-bottom: 0;
+											padding-top: 7px;
+											padding-bottom: 10px;
+											border-bottom: 1px solid transparent;
+											a{
+												color: $white;
+											}
+										}
+									}
+									.sl__home__content{
+										p{
+											color: $white;
+										}
+									}
+									.sl__home__link{
+										p{
+											padding-top: 10px;
+											padding-bottom: 20px;
+											a{
+												@include button-variant( $green--accent, transparent, transparent );
+												text-transform: uppercase;
+												@include opensans(bold);
+												font-size: 11px;
+											}
+										}
+									}
+							} 
+						}
+
+						&.active{
+							figure{
+							}
+							img{}
+							figcaption{}
+						}
+					}
+				}
+			} /* Owl Stage Outer Ends*/
+
+			.owl-nav{
+				.owl-prev, .owl-next{
+					position: absolute;
+					bottom: 20px;	
+					text-align: center;
+					opacity: 1;
+					background-color: $green--accent; 
+					@include border-radius(0);
+					width: 24px;
+					height: 24px;
+					span{
+						font-size: 12px;
+						line-height: 23px;
+					}
+				}
+				.owl-prev{
+					right: 55px;
+					span{
+					}
+				}
+				.owl-next{
+					right: 15px;
+					span{}
+				}
+			} /* Termina .owl-nav */
+			.owl-dots{ 
+				position: absolute;
+				top: 20px;
+				left: 20px;
+				.owl-dot{
+					float: left;
+					margin: 0 5px 0 0;
+					background: rgba(0,0,0,0.35);
+					padding: 4px;
+					@include border-radius(0);
+					box-shadow: inset 0 0 3px rgba(0,0,0,0.1);
+					span{
+						display: block;
+						width: 12px;
+						height: 4px;
+						@include border-radius(0);
+						background-color: $white;
+					}
+					&:hover, &.active{
+						span{
+							background-color: $green--accent;
+						}
+					}
+				}
+			} /* Termina .owl-dots */
+		} /* Termina .sl__home */
+	} /* Termina home*/
+}
+
 @media(min-width: $screen-lg-min){
 	.home{
+		.sl__home{
+			width: 1140px;
+			margin: 0 auto;
+			.owl-stage-outer{
+				overflow: visible;
+				.owl-stage{
+					background-color: $black;
+					.owl-item{
+						width: 1140px;
+						figure{
+							position: relative;
+							/*-webkit-transition: all 0.3s ease;
+							-moz-transition: all 0.3s ease;
+							-ms-transition: all 0.3s ease;
+							-o-transition: all 0.3s ease;
+							transition: all 0.3s ease;
+							transition: all 0.3s ease ease-in-out 0.3s;*/
+							opacity: 0.15;
+							@include focus-shadow();
+      						z-index: 0;
+							
+							img{
+								
+							}
+							figcaption{
+								position: absolute !important;
+								z-index: 100;
+								@include make-sm-column(6);
+								padding-left: 0;
+								padding-right: 0;
+								bottom: 30px;
+  								left: 30px;
+  								opacity: 0;
+  								.sl__home__hashtag, .sl__home__title, .sl__home__content, .sl__home__link{
+  								}
+  								.sl__home__hashtag{
+  									padding-left: 0px;
+  									padding-right: 0px;
+  									a{	
+  										text-transform: uppercase;
+  										display: block;
+  										padding-top: 5px;
+  										padding-bottom: 5px;
+  										@include text-on-focus();
+  										@include opensans();
+  									}
+  								}
+  								.sl__home__title{
+  									h3{
+  										@include opensans(light);
+  										@include text-on-focus();                                                                                                                                                                      
+  										margin-top: 3px;
+  										margin-bottom: 0;
+  										padding-top: 15px;
+  										padding-bottom: 10px;
+  										font-size: 48px !important;
+  										text-align: left;
+  										a{
+  											color: $white;
+  										}
+  									}
+  								}
+  								.sl__home__content{
+  									p{
+  										padding-top: 15px;
+  										@include text-on-focus();
+  										@include opensans(light);
+  										font-size: 18px;
+  										text-align: left;
+  									}
+  								}
+  								.sl__home__content, .sl__home__link{
+  									p{
+  										margin-bottom: 0;
+  										padding-bottom: 10px;
+  									}
+  								}
+  								.sl__home__link{
+  									p{
+  										padding-top: 10px;
+  										padding-bottom: 20px;
+  										a{
+  											@include button-variant( $green--accent, transparent, transparent );
+  											text-transform: uppercase;
+  											@include opensans(bold);
+  										}
+  									}
+  								}
+							} 
+						}
+
+						&.active{
+							figure{
+							/*-webkit-transition: all 0.3s ease;
+							-moz-transition: all 0.3s ease;
+							-ms-transition: all 0.3s ease;
+							-o-transition: all 0.3s ease;
+							transition: all 0.3s ease;
+							transition: all 0.3s ease ease-in-out 0.3s;
+							-webkit-filter: grayscale(0);
+							-moz-filter: grayscale(0);
+							filter: grayscale(0);*/
+							opacity: 1;
+							}
+							img{}
+							figcaption{
+								opacity: 1;
+							}
+						}
+					}
+				}
+			} /* Owl Stage Outer Ends*/
+
+			.owl-nav{
+				.owl-prev, .owl-next{
+					position: absolute;
+					top: 50%;	
+					text-align: center;
+					@include border-radius(0);
+					opacity: 0;
+					background-color: $green--accent; 
+					width: 24px;
+					height: 24px;
+					span{
+						font-size: 12px;
+						line-height: 23px;
+					}
+				}
+				.owl-prev{
+					left: -5%;
+					-webkit-animation-duration: 1s;
+					animation-duration: 1s;
+					-webkit-animation-fill-mode: both;
+					animation-fill-mode: both;
+					-webkit-animation-name: fadeOutLeft;
+					animation-name: fadeOutLeft;
+					span{
+					}
+				}
+				.owl-next{
+					right: -5%;
+					-webkit-animation-duration: 1s;
+					animation-duration: 1s;
+					-webkit-animation-fill-mode: both;
+					animation-fill-mode: both;
+					-webkit-animation-name: fadeOutRight;
+					animation-name: fadeOutRight;
+					span{}
+				}
+			} /* Termina .owl-nav */
+			.owl-dots{ 
+				position: absolute;
+				top: 20px;
+				left: 20px;
+				.owl-dot{
+					float: left;
+					margin: 0 5px 0 0;
+					background: rgba(0,0,0,0.35);
+					padding: 4px;
+					@include border-radius(0);
+					box-shadow: inset 0 0 3px rgba(0,0,0,0.1);
+					span{
+						display: block;
+						width: 12px;
+						height: 4px;
+						@include border-radius(0);
+						background-color: $white;
+					}
+					&:hover, &.active{
+						span{
+							background-color: $green--accent;
+						}
+					}
+				}
+			} /* Termina .owl-dots */
+		
+			&:hover{
+				.owl-nav{
+					.owl-prev{
+						-webkit-animation-duration: 1s;
+						animation-duration: 1s;
+						-webkit-animation-fill-mode: both;
+						animation-fill-mode: both;
+						-webkit-animation-name: fadeInLeft;
+						animation-name: fadeInLeft;
+						opacity: 1;
+					}
+					.owl-next{ 
+						-webkit-animation-duration: 1s;
+						animation-duration: 1s;
+						-webkit-animation-fill-mode: both;
+						animation-fill-mode: both;
+						-webkit-animation-name: fadeInRight;
+						animation-name: fadeInRight;
+						opacity: 1;
+					}
+				}
+			}
+		} /* Termina .sl__home */
+
+
 		.multimedia--1{
 			figure{ 
 				a.tab-icon{
