--- a/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
@@ -104,6 +104,37 @@
 			}
 		}
 	}
+
+	&.page-template-template-proyectos{
+		&.special-header{
+			.masshead{
+				.media{
+					position: relative;
+					padding-top: 130px; 
+					z-index: 100;
+					.media-left{
+
+					}
+					.media-body{
+						h1{
+							font-size: 24px;
+						}
+						h1, p{
+							@include text-on-focus();
+						}
+						a{
+							color: $green--accent;
+						}
+						@media (min-width: $screen-sm-min) {
+							h1{
+								font-size: 36px;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 
