--- a/wp-content/themes/inclusiva/assets/styles/layouts/_sidebar.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_sidebar.scss
@@ -1,39 +1,40 @@
 .sidebar{
 	.widget{
+		border-left: 1px solid $gray--lighter; 
 		margin-bottom: 30px;
-		border: 1px solid $gray--lighter;
 		background-color: $white;
 		h3{
 			padding: 13px 15px 12px 15px;
 			margin: 0;
-			border-bottom: 1px solid rgba(0,0,0,0.06);
-			font-size: 11px;
-			text-transform: uppercase;
-			box-shadow: inset 0 -1px 0 rgba(0,0,0,0.02);
-			@include opensans(bold);
-			letter-spacing: 1.5px;
+			font-size: 24px;
+			/* text-transform: uppercase; */ 
+			letter-spacing: 1.25px;
+			@include opensans(light);
 			-webkit-font-smoothing: antialiased;
-			background-color: $white--smoke;
-			background-image: none !important;
-			background-repeat: no repeat !important;
 		}
 		ul{
-			margin: 0;
+
+			margin: 15px 0 0;
 			padding: 0;
 			list-style-type: none;
 			li{
 				a{
 					display: block;
-					padding: 10px 15px;
-					border-bottom: 1px solid rgba(0,0,0,0.06);
+					padding: 7px 15px;
+					border-bottom: 1px solid $white--smoke;
+					color: $gray--light;
+					font-size: 14px;
 					&:hover{
-						background-color: $white--smoke;
+						background-color: transparent;
+						color: $green--light;
 					}
 				}
 				&.current-menu-item{
 					a{
-						background-color: $red--google--hover;
-						color: $white;
+						background-color: transparent;
+						color: $green--light;
+						border-left: 3px solid $green--light;
+						@include opensans(bold);
 					}
 				}
 			}
